expermienting with gradle tasks