@@ -836,6 +836,12 @@ class BuildPlugin implements Plugin<Project> {
                     if ((ext.get('runtimeJavaVersion') as JavaVersion) >= JavaVersion.VERSION_1_9) {
                         test.jvmArgs '--illegal-access=warn'
                     }
+                    if ((ext.get('runtimeJavaVersion') as JavaVersion) == JavaVersion.VERSION_1_8) {
+                        test.jvmArgs '-Djava.locale.providers=SPI,JRE'
+                    } else if ((ext.get('runtimeJavaVersion') as JavaVersion) >= JavaVersion.VERSION_1_9) {
+                        test.jvmArgs '-Djava.locale.providers=SPI,COMPAT'
+                    }
+
                 }
 
                 test.jvmArgumentProviders.add(nonInputProperties)
@@ -883,7 +889,7 @@ class BuildPlugin implements Plugin<Project> {
                 nonInputProperties.systemProperty('gradle.user.home', project.gradle.getGradleUserHomeDir())
 
                 nonInputProperties.systemProperty('compiler.java', "${-> (ext.get('compilerJavaVersion') as JavaVersion).getMajorVersion()}")
-                test.systemProperty('java.locale.providers', "SPI,COMPAT")
+//                nonInputProperties.systemProperty('java.locale.providers', "SPI,JRE")
 
                 // TODO: remove setting logging level via system property
                 test.systemProperty 'tests.logger.level', 'WARN'
